<resources>


    <string name="pub_key">ca-app-pub-5765642947536779~4060403433</string>


    <string name="app_name">MiamMiam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bottom_miam">Miam</string>
    <string name="menu_bottom_category">Catégories</string>
    <string name="menu_bottom_book">Favoris</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="facebook_application_id" translatable="false">1331457660361205</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1331457660361205</string>


    <string name="ingredients">Ingrédients :</string>
    <string name="etapes">Étapes :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classique">Selection recettes du jour :</string>
    <string name="add_recipe">Ajouter une recette</string>
    <string name="voyage">Selection recettes du monde :</string>
    <string name="start_recipe">Recette Star</string>


    <string name="entree">Entrées</string>
    <string name="aperitifs">Snacking</string>
    <string name="plats">Plats</string>
    <string name="viandes">Viandes</string>
    <string name="poissons">Poissons</string>
    <string name="vege">Végétarien</string>
    <string name="dessert">Desserts</string>
    <string name="smoothie">Liquide</string>

    //add recipe fragment
    <string name="name_recipe">Nom de la recette</string>
    <string name="number_person">Nbre de personnes</string>
    <string name="time">Temps en mn</string>
    <string name="add_ingredient">Ajouter un ingredient</string>
    <string name="add_step">Ajouter une étape</string>
    <string name="add_photo">Ajouter une photo</string>
    <string name="online">Mettre en ligne</string>
    <string name="valid_recipe">Tu valides cette recette?</string>
    <string name="add_recipe_toast">La recette sera en ligne après validation</string>

    //dialog ingredient
    <string name="dialog_ingredient">ex:100 gr tomates</string>
    <string name="dialog_valider">Valider</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="chef">Chef</string>

    //menu drawer
    <string name="log_out">Se déconnecter</string>
    <string name="profil">Mon compte</string>
    <string name="add_recipe_drawer">Ajouter une recette</string>
    <string name="quitt_dialog">Quitter MiamMiam?</string>
    //alert dialog logout
    <string name="log_out_dialog">Es-tu sûr(e) de vouloir te déconnecter?</string>

    //category query
    <string name="fish">poisson</string>
    <string name="snacking">snacking</string>
    <string name="vegetarien">vege</string>
    <string name="liquide">liquide</string>
    <string name="viande">viande</string>
    <string name="plat">plat</string>
    <string name="entre">entre</string>
    <string name="desser">dessert</string>

    //cardview no result
    <string name="no_favoris">Aucune recette dans tes favoris. Ajoutes une recette aux favoris en cliquant sur le coeur.</string>
    <string name="no_recipe">Ajoutes ta propre recette dans cette catégorie et épates d\'autres personnes.</string>

    //account activity
    <string name="delete">Supprimer mon compte</string>
    <string name="delete_dialog">Es-tu sûr(e) de vouloir supprimer ton compte?</string>


</resources>
