<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/profil"/>
        <item
                android:id="@+id/nav_add_recipe"
                android:icon="@drawable/ic_cookingbook"
                android:title="@string/add_recipe_drawer"/>

        <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out"/>
    </group>


</menu>
